# practica-calificada-4-cnoche

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  img.cpp  img.hpp  img_color.cpp  img_color.hpp  main.cpp  manage_png.cpp  manage_png.hpp  pc4  rotation.cpp  rotation.hpp
